# EazyStats24

./: CMakeLists.txt
EazyStats24/: CMakeLists.txt  main.cpp
EazyStats24/framework/: CMakeLists.txt  eazystatswindow.cpp  eazystatswindow.hpp
EazyStats24/framework/frameworkwidgets/windowtabwidget/: windowtabwidget.cpp  windowtabwidget.hpp
